fix: business operations card spacing

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ li i {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 2em;
 }
 
 .business-operations-card {
